syntax = "proto3";

package pb_metadata;



// ============================ State Machine

message Put {
  bytes key = 1;
  bytes value = 2;
}

message Delete {
  bytes key = 1;
}

message DeleteRange {
  bytes start_key = 1;
  bytes end_key = 2;
}

message MutableOperation {
  repeated Put puts = 1;
  repeated Delete deletes = 2;
  repeated DeleteRange delete_ranges = 3;
}

message Entry {
  MutableOperation operation = 1;
  uint64 timestamp = 2;
}



// =============================================

message UnitMeta {
  bool bootstrap_partition = 1;
}

message UnitInfo {
  uint64 id = 1;
  string advertise_address = 2;
}




message Unit {

}

message MailPostRequest {
  bytes payload = 1;
}

message MailPostResponse {

}

message SnapshotRequest {
  string path = 1;
}

message SnapshotResponse {

}

service Metadata {

  rpc mail_post(stream MailPostRequest) returns (stream MailPostResponse);

  rpc load_snapshot(stream SnapshotRequest) returns (stream SnapshotResponse);
}